[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes/AutocratTheme.tres" type="Theme" id=2]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -1.1225
margin_right = 1030.88
margin_bottom = 608.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EconomyPointsLabel" type="Label" parent="."]
margin_left = 26.9391
margin_top = 20.2043
margin_right = 158.939
margin_bottom = 68.2039
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PolicePointsLabel" type="Label" parent="."]
margin_left = 408.576
margin_top = 15.7145
margin_right = 576.576
margin_bottom = 85.7144
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MilitaryPointsLabel" type="Label" parent="."]
margin_left = 759.907
margin_top = 10.1022
margin_right = 922.907
margin_bottom = 92.1017
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateCasteButton" type="Button" parent="."]
margin_left = 405.209
margin_top = 483.781
margin_right = 573.209
margin_bottom = 557.781
theme = ExtResource( 2 )
text = "Create Caste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurnButton" type="Button" parent="."]
margin_left = 615.0
margin_top = 493.0
margin_right = 735.0
margin_bottom = 559.0
theme = ExtResource( 2 )
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnLabel" type="Label" parent="."]
margin_left = 787.0
margin_top = 493.0
margin_right = 947.0
margin_bottom = 556.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreasuryLabel" type="Label" parent="."]
margin_left = 223.37
margin_top = 495.006
margin_right = 355.37
margin_bottom = 555.006
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CasteBackButton" type="Button" parent="."]
margin_left = 37.0412
margin_top = 255.921
margin_right = 117.041
margin_bottom = 301.921
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CasteNextButton" type="Button" parent="."]
margin_left = 909.051
margin_top = 267.225
margin_right = 980.051
margin_bottom = 310.225
theme = ExtResource( 2 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstPos" type="Position2D" parent="."]
position = Vector2( 188.573, 283.983 )

[node name="SecondPos" type="Position2D" parent="."]
position = Vector2( 475.924, 285.105 )

[node name="ThirdPos" type="Position2D" parent="."]
position = Vector2( 734.09, 287.35 )

[node name="WarningLabel" type="Label" parent="."]
margin_left = 53.8782
margin_top = 497.251
margin_right = 176.878
margin_bottom = 564.25
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoostMenuButton" type="Button" parent="."]
margin_left = 437.76
margin_top = 111.124
margin_right = 540.76
margin_bottom = 164.124
theme = ExtResource( 2 )
text = "Boosts"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CreateCasteButton" to="." method="_on_CreateCasteButton_pressed"]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
[connection signal="pressed" from="CasteBackButton" to="." method="_on_CasteBackButton_pressed"]
[connection signal="pressed" from="CasteNextButton" to="." method="_on_CasteNextButton_pressed"]
[connection signal="pressed" from="BoostMenuButton" to="." method="_on_BoostMenuButton_pressed"]
